fixed webkit code overflow

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -68,7 +68,7 @@
 @font-face {
 	font-family: 'KievitWeb';
 	src: url('fonts/KievitWeb.eot');
-	src: url('fonts/KievitWeb.eot?#iefix') format('embedded-opentype'), 
+	src: url('fonts/KievitWeb.eot?#iefix') format('embedded-opentype'),
 			 url('fonts/KievitWeb.woff') format('woff'),
 			 url('fonts/kievitcomp-bold-webfont.svg#KievitComp-BoldRegular') format('svg');
 	font-weight: normal;
@@ -77,7 +77,7 @@
 @font-face {
 	font-family: 'KievitWeb';
 	src: url('fonts/KievitWeb-Bold.eot');
-	src: url('fonts/KievitWeb-Bold.eot?#iefix') format('embedded-opentype'), 
+	src: url('fonts/KievitWeb-Bold.eot?#iefix') format('embedded-opentype'),
 			 url('fonts/KievitWeb-Bold.woff') format('woff'),
 			 url('fonts/kievitcomp-bold-webfont.svg#KievitComp-BoldRegular') format('svg');
 	font-weight: bold;
@@ -95,8 +95,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -107,7 +107,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -193,6 +193,11 @@ p.intro {
 pre {
 	margin: 15px 0;
 	overflow: auto;
+	word-wrap: normal!important;
+}
+
+code {
+	/*width: 1000px;*/
 }
 
 hr {
@@ -447,7 +452,7 @@ aside {
 	-moz-border-radius: 10px;
 	-webkit-border-radius: 10px;
 	border-radius: 10px;
-	
+
 }
 
 .reference-wrap h3 {
@@ -773,7 +778,7 @@ header .btn:active {
 }
 
 #news-flash .inner {
-	
+
 	color: #fff;
 }
 
@@ -835,71 +840,71 @@ footer .twitter {
 ================================================**/
 
 @media(max-width: 1040px){
-	
+
 	.inner {
 		width: 100%;
 	}
-	
+
 	.reference-wrap {
 		right: 20px;
 	}
-	
+
 	aside {
 		padding-right: 20px;
 	}
-	
+
 	#primary {
 		padding: 0 20px;
 	}
-	
+
 	.home h1 {
 		width: 90%;
 		font-size: 3em;
 		margin: 0 auto;
 	}
-	
+
 	.home .bx-wrapper {
 		width: 90%;
 	}
-	
+
 	.pictogram .operator {
 		margin: 0 18px;
 	}
-	
+
 	header .logo {
 		padding-left: 20px;
 	}
-	
+
 	header .download {
 		right: 20px;
 	}
-	
+
 	header nav {
 		right: 170px;
 	}
-	
+
 	footer .left {
 		width: auto;
 		float: none;
 		padding-left: 20px;
 	}
-	
+
 	footer .first {
 		margin-bottom: 30px;
 	}
-	
+
 	footer p.pix {
 		padding-left: 20px;
 	}
-	
+
 }
 
 @media(max-width: 700px){
-	
+
 	#primary {
 		margin: 0 0 750px 0;
 	}
-	
+
 	aside {
 		float: none;
 		position: absolute;
@@ -914,80 +919,80 @@ footer .twitter {
 		text-align: center;
 		padding: 10px 0;
 	}
-	
+
 	header nav {
 		position: static;
 		text-align: center;
 	}
-	
+
 	header .download {
 		position: static;
 		text-align: center;
 		margin: 25px 0;
 	}
-	
+
 	.home h1 {
 		font-size: 2.25em;
 	}
-	
+
 	#main {
 		padding-top: 20px;
 	}
-	
+
 }
 
 @media(max-width: 500px){
-	
+
 	.example-item h1 {
 		font-size: 2em;
 		line-height: 1.25em;
 	}
-	
+
 	aside {
 		font-size: 90%;
 	}
-	
+
 	.home p.pop {
 		font-size: 1.25em;
 		margin-bottom: 30px;
 	}
-	
+
 	.reference-wrap {
 		display: none;
 	}
-	
+
 	footer {
 		font-size: 85%;
 	}
-	
+
 }
 
 @media(max-width: 400px){
-	
+
 	h1 {
 		font-size: 2.5em;
 	}
-	
+
 	.example-item h1 {
 		font-size: 1.5em;
 		line-height: 1.25em;
 	}
-	
+
 	.pictogram {
 		font-size: 45%;
 	}
-	
+
 	.home h1 {
 		font-size: 1.75em;
 	}
-	
+
 	nav a {
 		padding: 0 5px;
 	}
-	
+
 	#primary {
 		font-size: 100%;
 		margin-bottom: 850px;
 	}
-			
+
 }
